kubernetes/apps/default/it-tools/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
